--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -19,17 +19,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="38dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/ic_outline_navigate_next"
-            android:importantForAccessibility="no" />
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_outline_navigate_next" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="230dp"
             android:layout_marginTop="30dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_shopping_cart"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:importantForAccessibility="no" />
+            app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
 
     <TextView
@@ -42,6 +42,15 @@
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
+    <ProgressBar
+        android:id="@+id/prgBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -61,6 +70,7 @@
             tools:ignore="TextSizeCheck">
 
             <TextView
+                android:textColor="@color/gray_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -80,12 +90,13 @@
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="70dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="40dp"
             android:background="@drawable/bg_white_detail"
             android:orientation="vertical"
             tools:ignore="TextSizeCheck">
 
             <TextView
+                android:textColor="@color/gray_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -104,9 +115,11 @@
     </LinearLayout>
 
     <TextView
+        android:textSize="16sp"
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="@string/needs_a_driver"
         android:textColor="@color/dark_teal"
@@ -123,7 +136,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:thumbTint="@color/dark_teal"
-        tools:ignore="UseSwitchCompatOrMaterialXml"/>
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 
     <ImageView
@@ -132,9 +145,9 @@
         android:layout_height="100dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:importantForAccessibility="no"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:importantForAccessibility="no" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/tvCarsNameBook"
@@ -171,21 +184,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="4dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/ic_star"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        tools:ignore="ImageContrastCheck"
-        android:importantForAccessibility="no" />
+        tools:ignore="ImageContrastCheck" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:src="@drawable/ic_star"
         app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         app:layout_constraintStart_toEndOf="@+id/imageView8"
-        tools:ignore="ImageContrastCheck"
-        android:importantForAccessibility="no" />
+        tools:ignore="ImageContrastCheck" />
 
     <ImageView
         android:id="@+id/imageView10"
@@ -223,12 +236,12 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/bg_divide"
         app:layout_constraintBottom_toBottomOf="@+id/imgCarBook"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgCarBook"
-        android:importantForAccessibility="no" />
+        app:layout_constraintTop_toBottomOf="@+id/imgCarBook" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -249,6 +262,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/selected"
+                android:textColor="@color/gray_light"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -257,6 +271,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/days"
+                android:textColor="@color/gray_light"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -265,6 +280,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/price"
+                android:textColor="@color/gray_light"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -273,6 +289,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/drivers_fee"
+                android:textColor="@color/gray_light"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent" />
         </LinearLayout>
@@ -291,6 +308,7 @@
             android:id="@+id/tvSelected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/gray_light"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -299,6 +317,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:textColor="@color/gray_light"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -307,6 +326,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:textColor="@color/gray_light"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -315,6 +335,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:textColor="@color/gray_light"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
@@ -324,11 +345,11 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/bg_divide"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        android:importantForAccessibility="no" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <TextView
         android:id="@+id/textView10"
@@ -345,17 +366,17 @@
         tools:targetApi="p" />
 
     <TextView
+        android:textFontWeight="700"
         android:id="@+id/tvTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ptsans_regular"
-        android:textColor="@color/dark_teal"
+        android:textColor="@color/black"
         android:textSize="15sp"
-
-
         app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
         app:layout_constraintStart_toStartOf="@+id/linearLayout3"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintTop_toTopOf="@+id/textView10"
+        tools:targetApi="p" />
 
     <TextView
         android:id="@+id/textView11"
@@ -374,13 +395,13 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/bg_grey"
-        android:layout_marginTop="10dp"
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/bg_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11">
@@ -397,15 +418,15 @@
             app:layout_constraintStart_toEndOf="@+id/icLocation" />
 
         <ImageView
-            android:layout_marginStart="10dp"
             android:id="@+id/icLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:importantForAccessibility="no"
             android:src="@drawable/ic_location"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:importantForAccessibility="no" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -423,6 +444,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
