--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -71,7 +71,7 @@
             android:fontFamily="@font/inter_medium"
             android:text="@string/trending"
             android:textColor="@color/dark_teal"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,7 +81,7 @@
             android:fontFamily="@font/roboto_medium"
             android:text="@string/cars"
             android:textColor="#78909C"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -92,4 +92,14 @@
             android:padding="8dp" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/prgBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
