--- a/app/src/main/res/layout/activity_splash_second.xml
+++ b/app/src/main/res/layout/activity_splash_second.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.screen.SplashActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="match_parent"
@@ -90,7 +89,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="11dp"
             android:fontFamily="@font/hind_medium"
             android:text="Rent your dream car from the Best Company "
