Create Favourite Function

--- a/app/src/main/res/layout/cars_item_layout.xml
+++ b/app/src/main/res/layout/cars_item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="180dp"
-    android:layout_height="220dp"
+    android:layout_height="240dp"
     android:layout_margin="4dp">
 
     <ImageView
@@ -52,7 +52,7 @@
                 android:fontFamily="@font/ptsans_regular"
                 android:text="@string/day"
                 android:textColor="@color/pale_taupe"
-                android:textSize="13sp"
+                android:textSize="15sp"
                 tools:ignore="TextContrastCheck" />
         </LinearLayout>
     </LinearLayout>
@@ -65,7 +65,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/icFavourite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="115dp"
