--- a/app/src/main/res/layout/cars_favorites_item_layout.xml
+++ b/app/src/main/res/layout/cars_favorites_item_layout.xml
@@ -7,22 +7,22 @@
     android:layout_margin="8dp">
 
     <ImageView
-        android:id="@+id/pic"
+        android:id="@+id/picCarFavourite"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/toyota"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAccessibility="no" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pic"
+        app:layout_constraintStart_toEndOf="@+id/picCarFavourite"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -37,14 +37,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/ptsans_regular"
                 android:textColor="@color/dark_teal"
-                android:textSize="14sp" />
-
-            <ImageView
-                android:id="@+id/imgFavorite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2dp" />
+                android:textSize="14sp"/>
         </LinearLayout>
 
 
@@ -70,81 +63,64 @@
                 android:fontFamily="@font/ptsans_regular"
                 android:text="Rated:"
                 android:textColor="@color/light_silver"
-                android:textSize="13sp" />
+                android:textSize="13sp"
+                tools:ignore="HardcodedText,TextContrastCheck" />
 
             <ImageView
                 android:id="@+id/imgStart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/ic_star" />
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_star"
+                tools:ignore="ImageContrastCheck" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_star" />
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_star"
+                tools:ignore="ImageContrastCheck" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_star" />
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_star"
+                tools:ignore="ImageContrastCheck" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_star" />
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_star"
+                tools:ignore="ImageContrastCheck" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_star" />
+                android:importantForAccessibility="no"
+                android:src="@drawable/ic_star"
+                tools:ignore="ImageContrastCheck" />
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvDeleteFavourite"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/btnIncrease"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="15dp"
-                android:src="@drawable/ic_plus" />
-
-            <TextView
-                android:id="@+id/txtQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/roboto_medium"
-                android:text="1"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-            <ImageView
-                android:id="@+id/btnReduce"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:padding="15dp"
-                android:src="@drawable/ic_minus" />
-
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="15dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="30dp"
-                android:background="@drawable/bg_pale_taupe_button"
-                android:gravity="center"
-                android:text="Delete"
-                android:textColor="@color/pale_taupe"
-                android:textSize="10sp" />
-        </LinearLayout>
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_pale_taupe_button"
+            android:gravity="center"
+            android:text="@string/delete"
+            android:textColor="@color/pale_taupe"
+            android:textSize="15sp"
+            tools:ignore="TextContrastCheck" />
     </LinearLayout>
 
     <TextView
+        android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginTop="120dp"
@@ -152,4 +128,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
