--- a/app/src/main/res/layout/activity_payment_made.xml
+++ b/app/src/main/res/layout/activity_payment_made.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints"></LinearLayout>
+        tools:ignore="MissingConstraints">
+
+    </LinearLayout>
 
 
     <ImageView
@@ -94,7 +96,7 @@
         tools:ignore="TextSizeCheck" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/btnTrack"
         android:layout_width="349dp"
         android:layout_height="55dp"
         android:layout_marginTop="50dp"
@@ -126,6 +128,6 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/btnTrack" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
