--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,20 +3,20 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="" />
 
     <item
         android:id="@+id/favoriteFragment"
         android:icon="@drawable/ic_favorite"
-        android:title="Favorite" />
+        android:title="" />
 
     <item
         android:id="@+id/notificationFragment"
         android:icon="@drawable/ic_notifications"
-        android:title="Notification" />
+        android:title="" />
 
     <item
         android:id="@+id/personFragment"
         android:icon="@drawable/ic_person"
-        android:title="Person" />
+        android:title="" />
 </menu>
